--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.1",
   "private": true,
   "description": "Github Action for Guardian",
-  "main": "lib/main.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && ncc build src/main.js",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "test": "jest"
   },
+  "files": [
+    "dist/**/*",
+    "!dist/**/*.test.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kumo-by-Theodo/guardian-action.git"
@@ -28,21 +31,21 @@
   "author": "Frédéric Barthelet",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.6.0",
     "@actions/exec": "^1.1.1",
-    "@kumo-by-theodo/guardian": "^0.0.14"
+    "sls-mentor": "^2.1.12"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/node": "^16.10.5",
     "@typescript-eslint/parser": "^5.8.1",
     "@vercel/ncc": "^0.31.1",
     "eslint": "^8.21.0",
     "eslint-plugin-github": "^4.3.7",
     "eslint-plugin-jest": "^26.7.0",
-    "jest": "^27.2.5",
+    "jest": "^27.5.1",
     "js-yaml": "^4.1.0",
     "prettier": "2.5.1",
     "ts-jest": "^27.1.2",
-    "typescript": "^4.4.4"
+    "typescript": "^4.9.5"
   }
 }
