--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Github Action for Guardian",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc && ncc build src/main.js",
+    "build": "tsc ./src/run.ts",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
@@ -44,6 +44,7 @@
     "eslint-plugin-jest": "^26.7.0",
     "jest": "^27.5.1",
     "js-yaml": "^4.1.0",
+    "msw": "^1.2.1",
     "prettier": "2.5.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.9.5"
