--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Github Action for Guardian",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc ./src/run.ts",
+    "build": "tsc",
     "format": "prettier --write '**/*.ts'",
     "format-check": "prettier --check '**/*.ts'",
     "lint": "eslint src/**/*.ts",
@@ -35,18 +35,20 @@
     "sls-mentor": "^2.1.12"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@types/jest": "29.5.0",
     "@types/node": "^16.10.5",
     "@typescript-eslint/parser": "^5.8.1",
     "@vercel/ncc": "^0.31.1",
     "eslint": "^8.21.0",
     "eslint-plugin-github": "^4.3.7",
     "eslint-plugin-jest": "^26.7.0",
-    "jest": "^27.5.1",
+    "jest": "29.5.0",
+    "jest-environment-node": "29.5.0",
     "js-yaml": "^4.1.0",
     "msw": "^1.2.1",
     "prettier": "2.5.1",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "29.0.0-next.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
